# TheDiscordMathProblemBotRepo2

./: .breakpoints  .breakpoints.swp  .gitignore  .replit  0.17.0  =  =0.17.0  =1.5.0  =3.6  =3.7.4  LICENSE  MathProblemCache1.db  PRIVACY_POLICY.md  README.md  TERMS_AND_CONDITIONS.md  _error_logging.py  _linter.sh  check_for_commits.sh  checks.py  commands-documentation.md  cooldowns.py  custom_embeds.py  guild_math_problems.json  main.py  math_problems.json  potential_bot_names.txt  problems_module.db  problems_module.py  pylint-1.rtf  pyproject.toml  requirements.txt  return_intents.py  save_files.py  sql_dict2.py  the_documentation_file_loader.py  trusted_users.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: codeql-analysis.yml  main.yml
cogs/: __init__.py  appeals_cog.py  config_cog.py  data_modification_cog.py  debug_cog.py  deletion_view.py  developer_commands.py  helper_cog.py  interesting_computation_.py  misc_commands_cog.py  problems_cog.py  quiz_cog.py  suggestion_ext.py  task_cog.py  test_cog.py
docs/: commands-documentation.md  documentation.json  misc-non-commands-documentation.md  permissions_needed_and_why.md  why-i-made-this-project.md
error_logs/: 2021 December 1.txt  2021 December 10.txt  2021 December 11.txt  2021 December 12.txt  2021 December 13.txt  2021 December 14.txt  2021 December 15.txt  2021 December 17.txt  2021 December 3.txt  2021 December 4.txt  2021 December 5.txt  2021 December 9.txt  2021 November 18.txt  2021 November 19.txt  2021 November 20.txt  2021 November 22.txt  2021 November 24.txt  2021 November 27.txt  2021 November 28.txt  2021 November 3.txt  2021 November 7.txt  2021 November 8.txt  2021 October 11.txt  2021 October 21.txt  2021 October 24.txt  2021 October 25.txt  2021 October 26.txt  2021 October 27.txt  2021 October 28.txt  2021 October 29.txt  2021 October 30.txt  2021 October 31.txt  2021 September 24.txt  2021 September 25.txt  2021 September 26.txt  2021 September 27.txt  log_1.txt
eval_log/: 2022 August 15  2022 August 3  2022 August 8
helpful_modules/: FileDictionaryReader.py  __init__.py  _error_logging.py  actual_restarter.py  changelog.py  checks.py  constants_loader.py  cooldowns.py  custom_bot.py  custom_buttons.py  custom_embeds.py  dict_factory.py  my_modals.py  problems_module.py  restart_the_bot.py  return_intents.py  save_files.py  the_documentation_file_loader.py  threads_or_useful_funcs.py  user_error.py
pylint/: pylint-2.txt
sql-to-dict/: sql-dict.py
sql_to_dict/: __init__.py  sql_dict.py
(+39 files in other folders)
