[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["ay136416 <<>>"]
description = "An open source discord bot for quizzes!"
name = "thediscordmathproblembot"
version = "0.0.5a3"
[tool.poetry.dependencies]
aiosqlite = "^0.17.0"
discord = "^1.7.3"
discord-py-slash-command = "^3.0.1"
nextcord = "^2.0.0-alpha.1"
python = "^3.8"
python-dotenv = "^0.19.2"
typing-extensions = "^3.10.0"
"mysql-connector-python" = "^8.0.27"
[tool.poetry.dependencies.disnake]
git = "https://github.com/DisnakeDev/disnake.git"
[tool.poetry.dependencies.orjson]
git = "https://github.com/ijl/orjson.git"
